--- a/package.json
+++ b/package.json
@@ -12,12 +12,13 @@
     "@chakra-ui/react": "^1.8.3",
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
+    "@nivo/line": "^0.79.1",
     "@xstate/react": "^2.0.0",
     "analytics": "^0.8.0",
     "framer-motion": "^6.2.6",
     "got": "^12.0.1",
     "ky": "^0.28.7",
-    "next": "12.0.10",
+    "next": "^12.1.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-icons": "^4.3.1",
@@ -28,7 +29,7 @@
     "@types/node": "17.0.17",
     "@types/react": "17.0.39",
     "eslint": "8.9.0",
-    "eslint-config-next": "12.0.10",
+    "eslint-config-next": "^12.1.0",
     "typescript": "4.5.5"
   }
 }
